@@ -1,7 +1,6 @@
 package CSE4186.interview.controller;
 
 import CSE4186.interview.controller.dto.CommentDto;
-import CSE4186.interview.controller.dto.PaginationResponseDto;
 import CSE4186.interview.controller.dto.PostDto;
 import CSE4186.interview.entity.Comment;
 import CSE4186.interview.entity.Post;
@@ -10,11 +9,11 @@ import CSE4186.interview.service.PostService;
 import CSE4186.interview.utils.ApiUtil;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -31,7 +30,7 @@ public class PostController {
 
     @GetMapping("/list")
     @Operation(summary = "Get All Posts", description = "모든 게시글을 조회")
-    public ResponseEntity<PaginationResponseDto<List<PostDto.Response>>> getAllPosts(
+    public ApiUtil.ApiSuccessResult<PostDto.postListResponse> getAllPosts(
             @PageableDefault(page = 1, size = 10) Pageable pageable,
             @RequestParam(value = "q", defaultValue = "") String q,
             @RequestParam(value = "searchBy", defaultValue = "") String searchBy
@@ -40,15 +39,9 @@ public class PostController {
         Page<Post> postsByCondition = postService.findPostsByCondition(pageable, q, searchBy);
         List<PostDto.Response> response = postsByCondition
                 .stream().map(PostDto.Response::new)
-                .collect(Collectors.toList());
+                .toList();
 
-        return ResponseEntity.ok(
-                new PaginationResponseDto<>(
-                        "success",
-                        "",
-                        response,
-                        postsByCondition.getTotalPages()
-                ));
+        return ApiUtil.success(new PostDto.postListResponse(response, postsByCondition.getTotalPages()));
     }
     @GetMapping("/{id}")
     @Operation(summary = "Get Post", description = "게시글 상세")
@@ -59,14 +52,14 @@ public class PostController {
 
     @PostMapping
     @Operation(summary = "Add Post", description = "게시글 생성")
-    public ApiUtil.ApiSuccessResult<PostDto.Response> addPost(@RequestBody PostDto.createRequest request) {
+    public ApiUtil.ApiSuccessResult<PostDto.Response> addPost(@Valid @RequestBody PostDto.createRequest request) {
         Post post = postService.addPost(request);
         return ApiUtil.success(new PostDto.Response(post));
     }
 
     @PutMapping("/{id}")
     @Operation(summary = "Update Post", description = "게시글 수정")
-    public ApiUtil.ApiSuccessResult<PostDto.updateResponse> updatePost(@PathVariable Long id, @RequestBody PostDto.updateRequest request) {
+    public ApiUtil.ApiSuccessResult<PostDto.updateResponse> updatePost(@PathVariable Long id, @Valid @RequestBody PostDto.updateRequest request) {
         postService.updatePost(id, request);
         return ApiUtil.success(new PostDto.updateResponse(id));
     }
@@ -80,7 +73,7 @@ public class PostController {
 
     @PostMapping("/{id}/comment")
     @Operation(summary = "Add Comment", description = "댓글 생성")
-    public ApiUtil.ApiSuccessResult<CommentDto.Response> addPost(@RequestBody CommentDto.createRequest request,
+    public ApiUtil.ApiSuccessResult<CommentDto.Response> addPost(@Valid @RequestBody CommentDto.createRequest request,
                                                                  @PathVariable(name = "id") Long id) {
         Comment comment = commentService.addComment(request, id);
         return ApiUtil.success(new CommentDto.Response(comment));
@@ -88,14 +81,14 @@ public class PostController {
 
     @PutMapping("/{id}/comment")
     @Operation(summary = "Update Comment", description = "댓글 수정")
-    public ApiUtil.ApiSuccessResult<CommentDto.updateResponse> updateComment(@RequestBody CommentDto.updateRequest request) {
+    public ApiUtil.ApiSuccessResult<CommentDto.updateResponse> updateComment(@Valid @RequestBody CommentDto.updateRequest request) {
         commentService.updateComment(request);
         return ApiUtil.success(new CommentDto.updateResponse(request.getId()));
     }
 
     @DeleteMapping("/{id}/comment")
     @Operation(summary = "Delete Comment", description = "댓글 삭제")
-    public ApiUtil.ApiSuccessResult<String> deleteComment(@RequestBody CommentDto.deleteRequest request) {
+    public ApiUtil.ApiSuccessResult<String> deleteComment(@Valid @RequestBody CommentDto.deleteRequest request) {
         commentService.deleteComment(request.getId());
         return ApiUtil.success("댓글이 삭제되었습니다.");
     }
